--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,6 @@ bin/
 
 ### Mac OS ###
 .DS_Store### Gradle template
-.gradle
 **/build/
 !src/**/build/
 
@@ -57,3 +56,4 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+!/.gitignore
